@@ -9,6 +9,7 @@
   integer values from the wire (bug #49794)
 - fixed problem where not specifying the data type of the return value of a function caused it to 
   mistakenly use Decimal as the return type (bug #49642)
+- fixed bug where a scipt that had an empty last line would cause an InvalidOperationException (bug #50344)
 
 Version 6.0.5
 - ensure that MySqlPacket always has a valid encoding. This prevents null reference exceptions in ReadString()
